# mx-subscription-fee-rs

./: Cargo.toml  README.md
common/common_structs/: Cargo.toml
common/common_structs/src/: lib.rs  unique_payments.rs
common/common_subscriber/: Cargo.toml
common/common_subscriber/src/: common_subscriber.rs
farm-boosted-rewards-subscriber/: Cargo.toml  README.md
farm-boosted-rewards-subscriber/meta/: Cargo.toml
farm-boosted-rewards-subscriber/meta/src/: main.rs
farm-boosted-rewards-subscriber/src/: buy_mex.rs  claim_farm_boosted.rs  events.rs  lib.rs  service.rs  subscriber_config.rs
farm-boosted-rewards-subscriber/tests/: subscriber_test.rs
farm-boosted-rewards-subscriber/tests/farm_setup/: mod.rs
farm-boosted-rewards-subscriber/tests/subscriber_setup/: mod.rs
farm-boosted-rewards-subscriber/tests/subscription_setup/: mod.rs
farm-boosted-rewards-subscriber/wasm/: Cargo.toml
farm-boosted-rewards-subscriber/wasm/src/: lib.rs
metabonding-subscriber/: Cargo.toml
metabonding-subscriber/meta/: Cargo.toml
metabonding-subscriber/meta/src/: main.rs
metabonding-subscriber/src/: claim_metaboding.rs  lib.rs
metabonding-subscriber/wasm/: Cargo.toml
subscriber/: Cargo.toml
subscriber/meta/: Cargo.toml
subscriber/meta/src/: main.rs
subscriber/src/: base_functions.rs  base_init.rs  common_storage.rs  daily_operations.rs  lib.rs  service.rs  subscription.rs  user_tokens.rs
subscriber/tests/: subscriber_test.rs
subscriber/tests/pair_setup/: mod.rs
subscriber/tests/subscriber_setup/: mod.rs
subscriber/tests/subscription_setup/: mod.rs
subscriber/wasm/: Cargo.toml
subscriber/wasm/src/: lib.rs
subscription-fee/: Cargo.toml  README.md
subscription-fee/meta/: Cargo.toml
subscription-fee/meta/src/: main.rs
subscription-fee/src/: common_storage.rs  daily_operations.rs  fees.rs  lib.rs  low_level_actions.rs  pair_actions.rs  service.rs  subscription.rs  subtract_payments.rs  user_tokens.rs
subscription-fee/tests/: subscription_test.rs
subscription-fee/tests/pair_setup/: mod.rs
subscription-fee/tests/subscription_setup/: mod.rs
subscription-fee/wasm/: Cargo.toml
subscription-fee/wasm/src/: lib.rs
