[package]
name = "farm-boosted-rewards-subscriber"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.45.1"

[dependencies.multiversx-sc-modules]
version = "=0.45.1"

[dependencies.auto-farm]
git = "https://github.com/multiversx/mx-exchange-tools-sc"
rev = "1416a8b"

[dependencies.subscription-fee]
path = "../subscription-fee"

[dependencies.common_subscriber]
path = "../common/common_subscriber"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dependencies.farm-with-locked-rewards]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dev-dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.simple-lock]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.locking_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.45.1"
