[package]
name = "metabonding-subscriber"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[dependencies.multiversx-sc]
version = "=0.43.2"

[dependencies.multiversx-sc-modules]
version = "=0.43.2"

[dependencies.subscriber]
path = "../subscriber"

[dependencies.auto-farm]
git = "https://github.com/multiversx/mx-exchange-tools-sc"
rev = "39e355f"

[dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "7f25a72"

[dependencies.metabonding]
git = "https://github.com/multiversx/mx-metabonding-sc"
rev = "cec34aa"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.43.2"
