[package]
name = "subscriber"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.43.3"

[dependencies.multiversx-sc-modules]
version = "=0.43.3"

[dependencies.auto-farm]
git = "https://github.com/multiversx/mx-exchange-tools-sc"
rev = "5ea1698"

[dependencies.subscription-fee]
path = "../subscription-fee"

[dev-dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "a94a332"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "a94a332"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.43.3"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"
