[package]
name = "subscription-fee"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.45.1"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.45.1"

[dependencies.auto-farm]
git = "https://github.com/multiversx/mx-exchange-tools-sc"
rev = "1416a8b"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dev-dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "56a8e77"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.45.1"